--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,10 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 3.1.5 (2021-02-18)
+-------------------------------------
+
+
 Changes in version 3.2.0-M3 (2021-02-17)
 ----------------------------------------
 * #3553 - Upgrade to MongoDB driver 4.2.0.
@@ -3289,6 +3293,7 @@ Repository
 * Automatic implementation of interface query method names on repositories.
 * Namespace support for Mongo repositories
 * Allow usage of pagination and sorting with repositories
+
 
 
 
