Introduce Update annotation.
Switch update execution to an annotation based model that allows usage of both the classic update as well as the aggregation pipeline variant. Add the reactive variant of it.
Make sure to allow parameter binding for update expressions and verify method return types.
Update Javadoc and reference documentation.

See: #2107
Original Pull Request: #284

--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -1,6 +1,11 @@
 [[new-features]]
 = New & Noteworthy
 
+[[new-features.3.4]]
+== What's New in Spring Data MongoDB 3.4
+
+* Find and update ``Document``s via <<mongodb.repositories.queries.update,Repository method>>.
+
 [[new-features.3.3]]
 == What's New in Spring Data MongoDB 3.3
 
