--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -5,6 +5,7 @@
 == What's New in Spring Data MongoDB 3.2
 
 * Support for <<embedded-entities,Embedded Types>> to unwrap nested objects into the parent `Document`.
+* <<mongo-template.querying.field-selection,Support expressions to define field projections>>.
 
 [[new-features.3.1]]
 == What's New in Spring Data MongoDB 3.1
