Rename Embedded annotation to Unwrapped.
The meaning of embedding a Document in MongoDB is different compared to column based stores. Typically the term is used for a Document in Document approach and not for flattening out a values into the enclosing Document.

Closes: #3600
Original pull request: #3604.

--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -4,7 +4,7 @@
 [[new-features.3.2]]
 == What's New in Spring Data MongoDB 3.2
 
-* Support for <<embedded-entities,Embedded Types>> to unwrap nested objects into the parent `Document`.
+* Support for <<unwrapped-entities,unwrapping>> nested objects into the parent `Document`.
 * <<mongo-template.querying.field-selection,Support expressions to define field projections>>.
 
 [[new-features.3.1]]
