--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,13 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 3.0.9.RELEASE (2021-04-14)
+---------------------------------------------
+* #3623 - `@Aggregation` repository query method causes `NullPointerException` when the result is empty.
+* #3609 - SimpleReactiveMongoRepository#saveAll does not populate @Id property if it is immutable.
+* #3414 - Criteria or toEquals fail if contains regex [DATAMONGO-2559].
+
+
 Changes in version 3.1.7 (2021-03-31)
 -------------------------------------
 * #3613 - Use StringUtils.replace(…) instead of String.replaceAll(…) for mapKeyDotReplacement.
@@ -3353,6 +3360,7 @@ Repository
 * Automatic implementation of interface query method names on repositories.
 * Namespace support for Mongo repositories
 * Allow usage of pagination and sorting with repositories
+
 
 
 
