--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,13 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 3.1.8 (2021-04-14)
+-------------------------------------
+* #3623 - `@Aggregation` repository query method causes `NullPointerException` when the result is empty.
+* #3601 - Criteria object not allowing to use field names with underscore in them.
+* #3414 - Criteria or toEquals fail if contains regex [DATAMONGO-2559].
+
+
 Changes in version 3.0.9.RELEASE (2021-04-14)
 ---------------------------------------------
 * #3623 - `@Aggregation` repository query method causes `NullPointerException` when the result is empty.
@@ -3360,6 +3367,7 @@ Repository
 * Automatic implementation of interface query method names on repositories.
 * Namespace support for Mongo repositories
 * Allow usage of pagination and sorting with repositories
+
 
 
 
