Update entity linking support to derive document pointer from lookup query.
Simplify usage by computing the pointer from the lookup.
Update the reference documentation, add JavaDoc and refine API.

--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -1,6 +1,11 @@
 [[new-features]]
 = New & Noteworthy
 
+[[new-features.3.3]]
+== What's New in Spring Data MongoDB 3.3
+
+* Extended support for <<mapping-usage.linking, linking>> entities.
+
 [[new-features.3.2]]
 == What's New in Spring Data MongoDB 3.2
 
