--- a/src/main/asciidoc/reference/mongo-repositories-aggregation.adoc
+++ b/src/main/asciidoc/reference/mongo-repositories-aggregation.adoc
@@ -21,19 +21,22 @@ public interface PersonRepository extends CrudReppsitory<Person, String> {
   List<PersonAggregate> groupByLastnameAnd(String property);                       <3>
 
   @Aggregation("{ $group: { _id : $lastname, names : { $addToSet : ?0 } } }")
-  List<PersonAggregate> groupByLastnameAnd(String property, Pageable page);        <4>
+  Slice<PersonAggregate> groupByLastnameAnd(String property, Pageable page);       <4>
+
+  @Aggregation("{ $group: { _id : $lastname, names : { $addToSet : $firstname } } }")
+  Stream<PersonAggregate> groupByLastnameAndFirstnamesAsStream();                  <5>
 
   @Aggregation("{ $group : { _id : null, total : { $sum : $age } } }")
-  SumValue sumAgeUsingValueWrapper();                                              <5>
+  SumValue sumAgeUsingValueWrapper();                                              <6>
 
   @Aggregation("{ $group : { _id : null, total : { $sum : $age } } }")
-  Long sumAge();                                                                   <6>
+  Long sumAge();                                                                   <7>
 
   @Aggregation("{ $group : { _id : null, total : { $sum : $age } } }")
-  AggregationResults<SumValue> sumAgeRaw();                                        <7>
+  AggregationResults<SumValue> sumAgeRaw();                                        <8>
 
   @Aggregation("{ '$project': { '_id' : '$lastname' } }")
-  List<String> findAllLastnames();                                                 <8>
+  List<String> findAllLastnames();                                                 <9>
 }
 ----
 [source,java]
@@ -52,7 +55,7 @@ public class PersonAggregate {
 
 public class SumValue {
 
-  private final Long total;                                                        <5> <7>
+  private final Long total;                                                        <6> <8>
 
   public SumValue(Long total) {
     // ...
@@ -65,12 +68,13 @@ public class SumValue {
 <2> If `Sort` argument is present, `$sort` is appended after the declared pipeline stages so that it only affects the order of the final results after having passed all other aggregation stages.
 Therefore, the `Sort` properties are mapped against the methods return type `PersonAggregate` which turns `Sort.by("lastname")` into `{ $sort : { '_id', 1 } }` because `PersonAggregate.lastname` is annotated with `@Id`.
 <3> Replaces `?0` with the given value for `property` for a dynamic aggregation pipeline.
-<4> `$skip`, `$limit` and `$sort` can be passed on via a `Pageable` argument. Same as in <2>, the operators are appended to the pipeline definition.
-<5> Map the result of an aggregation returning a single `Document` to an instance of a desired `SumValue` target type.
-<6> Aggregations resulting in single document holding just an accumulation result like eg. `$sum` can be extracted directly from the result `Document`.
+<4> `$skip`, `$limit` and `$sort` can be passed on via a `Pageable` argument. Same as in <2>, the operators are appended to the pipeline definition. Methods accepting `Pageable` can return `Slice` for easier pagination.
+<5> Aggregation methods can return `Stream` to consume results directly from an underlying cursor. Make sure to close the stream after consuming it to release the server-side cursor by either calling `close()` or through `try-with-resources`.
+<6> Map the result of an aggregation returning a single `Document` to an instance of a desired `SumValue` target type.
+<7> Aggregations resulting in single document holding just an accumulation result like eg. `$sum` can be extracted directly from the result `Document`.
 To gain more control, you might consider `AggregationResult` as method return type as shown in <7>.
-<7> Obtain the raw `AggregationResults` mapped to the generic target wrapper type `SumValue` or `org.bson.Document`.
-<8> Like in <6>, a single value can be directly obtained from multiple result ``Document``s.
+<8> Obtain the raw `AggregationResults` mapped to the generic target wrapper type `SumValue` or `org.bson.Document`.
+<9> Like in <6>, a single value can be directly obtained from multiple result ``Document``s.
 ====
 
 In some scenarios, aggregations might require additional options, such as a maximum run time, additional log comments, or the permission to temporarily write data to disk.
@@ -115,5 +119,5 @@ Simple-type single-result inspects the returned `Document` and checks for the fo
 . Throw an exception if none of the above is applicable.
 ====
 
-WARNING: The `Page` return type is not supported for repository methods using `@Aggregation`. However you can use a
-`Pageable` argument to add `$skip`, `$limit` and `$sort` to the pipeline.
+WARNING: The `Page` return type is not supported for repository methods using `@Aggregation`. However, you can use a
+`Pageable` argument to add `$skip`, `$limit` and `$sort` to the pipeline and let the method return `Slice`.
