--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -5,6 +5,7 @@
 == What's New in Spring Data MongoDB 3.3
 
 * Extended support for <<mapping-usage.document-references, referencing>> entities.
+* Include/exclude `null` properties on write to `Document` through `@Field(write=…)`.
 
 [[new-features.3.2]]
 == What's New in Spring Data MongoDB 3.2
