--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,17 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 3.2.2 (2021-06-22)
+-------------------------------------
+* #3677 - Add missing double quote to GeoJson.java JSDoc header.
+* #3668 - Projection on the _id field returns wrong result when using `@MongoId` (MongoDB 4.4).
+* #3666 - Documentation references outdated `Mongo` client.
+* #3660 - MappingMongoConverter problem: ConversionContext#convert does not try to use custom converters first.
+* #3659 - [3.2.1] Indexing Class with Custom Converter -> Couldn't find PersistentEntity for property private [...].
+* #3635 - $floor isOrOrNor() return true.
+* #3633 - NPE in QueryMapper when use Query with `null` as value.
+
+
 Changes in version 3.1.10 (2021-06-22)
 --------------------------------------
 * #3677 - Add missing double quote to GeoJson.java JSDoc header.
@@ -3396,6 +3407,7 @@ Repository
 * Automatic implementation of interface query method names on repositories.
 * Namespace support for Mongo repositories
 * Allow usage of pagination and sorting with repositories
+
 
 
 
