Add support for creating Time Series collection.
Introduce time series to CollectionOptions and add dedicated TimeSeries annotation to derive values from.

--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -5,6 +5,7 @@
 == What's New in Spring Data MongoDB 3.3
 
 * Extended support for <<mapping-usage.document-references, referencing>> entities.
+* Support for <<time-series, Time Series>> collections.
 * Include/exclude `null` properties on write to `Document` through `@Field(write=…)`.
 * Support for <<mapping-usage-indexes.wildcard-index>>.
 
