--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,40 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 3.3.0-M1 (2021-07-16)
+----------------------------------------
+* #3731 - Add support for creating time series collection.
+* #3706 - Upgrade to MongoDB 4.3.0 Drivers.
+* #3705 - Adapt to changes in AssertJ 3.20.
+* #3702 - `MappingMongoConverter` incorrectly processes an object property of type `org.bson.Document`.
+* #3700 - Adapt to consolidated PersistentEntity API.
+* #3693 - Upgrade to MongoDB 4.3.0-beta4 Drivers.
+* #3689 - Fix Regression in generating queries with nested maps with numeric keys.
+* #3688 - Multiple maps with numeric keys in a single update produces the wrong query (Regression).
+* #3686 - reading a document with a list with a null element fails with Spring Data Mongo 3.2.2, works with 3.2.1.
+* #3684 - Add equals and hashcode to UnwrappedMongoPersistentProperty (fixes #3683).
+* #3683 - Memory Leak: instances of UnwrappedMongoPersistentProperty are accumulating in PreferredConstructor.isPropertyParameterCache.
+* #3677 - Add missing double quote to GeoJson.java JSDoc header.
+* #3674 - Upgrade to Querydsl 5.0.
+* #3672 - Directly import JSR305 jar.
+* #3670 - `Binary` not deserialized to `byte[]` for property of type `Object`.
+* #3668 - Projection on the _id field returns wrong result when using `@MongoId` (MongoDB 4.4).
+* #3666 - Documentation references outdated `Mongo` client.
+* #3660 - MappingMongoConverter problem: ConversionContext#convert does not try to use custom converters first.
+* #3659 - [3.2.1] Indexing Class with Custom Converter -> Couldn't find PersistentEntity for property private [...].
+* #3656 - Fix Build on Java 16.
+* #3648 - Inconsistent nullability of read() in templates: not sure if mapper can skip a document.
+* #3638 - Introduce template method for easier customization of fragments.
+* #3635 - $floor isOrOrNor() return true.
+* #3633 - NPE in QueryMapper when use Query with `null` as value.
+* #3632 - Fix bullet points in aggregations framework asciidoc.
+* #3603 - Update CI to Java 16.
+* #3602 - Add support for flexible document references.
+* #3543 - Aggregation query method should be able to return `Slice` and `Stream`.
+* #3407 - Add an option to @Field annotation to control property write rules [DATAMONGO-2551].
+* #3225 - Add support for Wildcard Indexes [DATAMONGO-2368].
+
+
 Changes in version 3.1.11 (2021-07-16)
 --------------------------------------
 * #3689 - Fix Regression in generating queries with nested maps with numeric keys.
@@ -3413,6 +3447,7 @@ Repository
 * Automatic implementation of interface query method names on repositories.
 * Namespace support for Mongo repositories
 * Allow usage of pagination and sorting with repositories
+
 
 
 
